@@ -36,6 +36,7 @@ namespace CXX
     Context::
     Context (std::wostream& o,
              SemanticGraph::Schema& root,
+             SemanticGraph::Path const& path,
              CLI::Options const& ops,
              Counts const& counts_,
              Boolean generate_xml_schema__,
@@ -45,6 +46,7 @@ namespace CXX
              Regex const* ie)
         : CXX::Context (o,
                         root,
+                        path,
                         map,
                         ops.value<CLI::char_type> (),
                         ops.value<CLI::char_encoding> (),
